--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -9,8 +9,7 @@
     <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
-      <em>*Pricing may change and deals can expire fast.</em>
-      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+      <%= render 'deals/notes' %>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="product_link">Shop Now at Amazon</a></div>
