--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -11,8 +11,7 @@
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
       <p><span>Take <strong>percentage% off at $Origianl_price</strong> with promo code: <strong>promo_code</strong></span></p>
       <span class="ex_date">Expiration Date : End_date</span>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+      <%= render 'deals/notes' %>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
@@ -26,6 +25,199 @@
 
  <p>run out of stock soon</p>
 -->
+
+<div class="card clearfix" data-score="70" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Lcpuu5"><img src="https://m.media-amazon.com/images/I/71ufACjhLcL._SR400,400_.jpg" alt="CIOR Water Shoes Men Women Aqua Shoes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>8 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Lcpuu5">CIOR Water Shoes Men Women Aqua Shoes Swim Shoes Barefoot Quick-Dry Beach Surf Yoga Exercise Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>70% off at $23.99</strong> with promo code: <strong>705DM81X</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Lcpuu5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="29.92">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JvzX1T"><img src="https://m.media-amazon.com/images/I/715UXykyTaL._SR400,400_.jpg" alt="Solar Lights 2-in-1 Waterproof 9 LEDs" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>582 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JvzX1T">Solar Lights 2-in-1 Waterproof 9 LEDs Solar Landscape Spotlights Outdoor Adjustable Wall Light Landscape Light...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.92</span><span class="ori_price">$40.99</span></address>
+      <p><span>Take <strong>27% off at $40.99</strong> with promo code: <strong>27TKBNQ7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JvzX1T">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.53">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JEloHS"><img src="https://m.media-amazon.com/images/I/61AZ32aUp3L._SR400,400_.jpg" alt="Homgeek French Press Coffee Maker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>70 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JEloHS">Homgeek French Press Coffee Maker, Double Wall Stainless Steel French Press Heat Resistant Coffee Press with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.53</span><span class="ori_price">$27.90</span></address>
+      <p><span>Take <strong>30% off at $27.90</strong> with promo code: <strong>30HJFT11</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JEloHS">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2S5jwMi"><img src="https://m.media-amazon.com/images/I/71Tzi0aJ1JL._SR400,400_.jpg" alt="Vintage Aromatherapy Essential Oil Diffuser" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>90 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2S5jwMi">Vintage Aromatherapy Essential Oil Diffuser, 100ml Bronze Metal Air Diffuser Cool Mist Humidifier with Adjustable Mist Mode,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.48</span><span class="ori_price">$28.97</span></address>
+      <p><span>Take <strong>50% off at $28.97</strong> with promo code: <strong>50CU47D6</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2S5jwMi">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="33.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JqXvEM"><img src="https://m.media-amazon.com/images/I/717XWt7TagL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>897 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JqXvEM">Wireless Earbuds, TaoTronics Bluetooth 5.0 Headphones SoundLiberty 53 Earphones IPX7 Waterproof Smart Touch Control...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$33.74</span><span class="ori_price">$44.99</span></address>
+      <p><span>Take <strong>25% off at $44.99</strong> with promo code: <strong>25Y6Q3SZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JqXvEM">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2S5pMDN"><img src="https://m.media-amazon.com/images/I/51TItziL3FL._SR400,400_.jpg" alt="RAOYI LED Desk Lamp Eye-Caring Table Lamps" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>132 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2S5pMDN">RAOYI LED Desk Lamp Eye-Caring Table Lamps, 5 Color Modes with 7 Levels of Brightness, Dimmable Office Lamp with USB Charging Port,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.93</span><span class="ori_price">$19.89</span></address>
+      <p><span>Take <strong>40% off at $19.89</strong> with promo code: <strong>40ABYFXH</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2S5pMDN">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="23.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GjENxd"><img src="https://m.media-amazon.com/images/I/61WO7dwPKnL._SR400,400_.jpg" alt="MorePro Waterproof Health Tracker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>981 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GjENxd">MorePro Waterproof Health Tracker, Fitness Tracker Color Screen Sport Smart Watch,Activity Tracker with Heart Rate ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.00</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $45.99</strong> with promo code: <strong>50MNTL49</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2GjENxd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2G3FTwz"><img src="https://m.media-amazon.com/images/I/71-8xDZOfsL._SR400,400_.jpg" alt="Smart Storage Roll-Up Spacesaver..." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>29 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2G3FTwz">Smart Storage Roll-Up Spacesaver Premium Reusable Vacuum Storage Bags | Compression Bags for Travel | Waterproof Vacuum...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>60% off at $19.99</strong> with promo code: <strong>60F7ZL43</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2G3FTwz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JCrnwT"><img src="https://m.media-amazon.com/images/I/71xdIyDHwWL._SR400,400_.jpg" alt="Car Cup Holder Phone Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>89 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JCrnwT">Car Cup Holder Phone Mount, Adjustable Gooseneck Cell Phone Holder with 360° Rotatable Cradle for iPhone Xs/X/8/7...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>55% off at $19.99</strong> with promo code: <strong>5583P5O2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 09:00 AM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JCrnwT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="21.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jz7vuF"><img src="https://m.media-amazon.com/images/I/61DmXZ76XiL._SR400,400_.jpg" alt="Acumen Dash Cam for Cars" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>18 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jz7vuF">Acumen Dash Cam for Cars 1080P FHD Driving Recorder Vehicle Dashboard Camera with Wide Angle 1.5" LCD Screen...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.59</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>20% off at $26.99</strong> with promo code: <strong>20FDH69Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jz7vuF">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="121.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2xGA3g8"><img src="https://m.media-amazon.com/images/I/61l2mup9qAL._SR400,400_.jpg" alt="Video Camera 4K Camcorder" /></a>
@@ -41,8 +233,7 @@
       </address>
       <p><span>Take <strong>50% off at $242.99</strong> with promo code: <strong>50V3JXE8</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+      <%= render 'deals/notes' %>
     </div>
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xGA3g8">Use Code at Amazon</a></div>
