--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -20,6 +20,8 @@
          </div> -->
         </div>
 
+       <!--  <a href="https://www.facebook.com/0higottabuythis/photos/a.197284250987000/312887269426697/?type=3&theater">Write Comments</a> -->
+
         <% if can? :update, @gadget %>
           <div class="pinterest">
            <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
