--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -47,6 +47,108 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="25" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jz9jUt"><img src="https://images-na.ssl-images-amazon.com/images/I/71xlzBEqMPL._SX679_.jpg" alt="Umbra FishHotel Mini Aquarium" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>287 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jz9jUt">Umbra FishHotel Mini Aquarium, Great for Goldfish, Bettas, and Other Small Fish, 1.8 Gallon</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$30.00</span><span class="ori_price">$40.00</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jz9jUt">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XJCbU5"><img src="https://images-na.ssl-images-amazon.com/images/I/81FcxwI6sIL._SX522_.jpg" alt="Monopoly Stranger Things Edition" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>133 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XJCbU5">Monopoly Stranger Things Edition</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$24.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XJCbU5">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="269.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XDOQaJ"><img src="https://images-na.ssl-images-amazon.com/images/I/81ReMZPkFAL._SX466_.jpg" alt="hOmeLabs Beverage Refrigerator and Cooler" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>492 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XDOQaJ">hOmeLabs Beverage Refrigerator and Cooler - 120 Can Mini Fridge with Glass Door for Soda Beer or Wine ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$269.99</span><span class="ori_price">$349.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XDOQaJ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YLapTu"><img src="https://images-na.ssl-images-amazon.com/images/I/81I1c0NHOzL._SY445_.jpg" alt="Bio-Oil 200ml: Multiuse Skincare Oil" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>6,673 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YLapTu">Bio-Oil 200ml: Multiuse Skincare Oil (6.7oz)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.99</span><span class="ori_price">$36.06</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YLapTu">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LN3OV4"><img src="https://images-na.ssl-images-amazon.com/images/I/81-Gx2TAuhL._SX679_.jpg" alt="SplashEZ 3-in-1 Sprinkler for Kids" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>748 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">SplashEZ 3-in-1 Sprinkler for Kids, Splash Pad, and Wading Pool for Learning – Children’s Sprinkler Pool, 60’’ Inflatable Water ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$29.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="product_link">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XBcyV6"><img src="https://images-na.ssl-images-amazon.com/images/I/81h7BgNJlzL._SX522_.jpg" alt="First Builders Big Building Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>6,296 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XBcyV6">First Builders Big Building Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.90</span><span class="ori_price">$24.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XBcyV6">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="139.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LMCxBY"><img src="https://images-na.ssl-images-amazon.com/images/I/61A+6HrlyxL._AC_SR300,300_.jpg" alt="Robotic Vacuum Cleaner" /></a>
