--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -296,7 +296,7 @@
 <div class="card clearfix" data-score="51" data-price="21.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2YKRvfh"><img src="https://images-na.ssl-images-amazon.com/images/I/81IeXEXyQ-L._SX342_.jpg" alt="Jurassic Park Collection" /></a>
-    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>Re1,583view_Num Amazon Reviews</p></div>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,583 Amazon Reviews</p></div>
   </div>
   <div class="inner">
     <span class="regular"><em>51% OFF</em> + free shipping</span>
