--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -29,12 +29,36 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Discover More</a></div>
 </div>
 
+<div class="filter-node promotion_box" data-filter='["sales","Up to 50% Off | Subscription & Discovery Boxes"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2NQ7uaY">Up to 50% Off | Subscription & Discovery Boxes</a></h2>
+    <p>Subscription boxes for him, her, and even Fido are now available on Amazon. With every box, you will receive a collection of curated surprises or exclusive items – always at a tremendous value – delivered right to your door. <br />And for a limited time only, Prime Members can save up to 70% on their first box when they subscribe.</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2NQ7uaY">Discover More</a></div>
+</div>
+
+<div class="filter-node promotion_box" data-filter='["sales","Up to 50% Off | Subscription & Discovery Boxes: Toys & Kids"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/30ujxwi">Up to 50% Off | Subscription & Discovery Boxes: Toys & Kids</a></h2>
+    <p>Find your favorite kids and toys subscription boxes on Amazon. Whether you know children who are aspiring coders and scientists, or children of all ages who just love collecting pop-culture collectibles, there's a subscription box for you.</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/30ujxwi">Discover More</a></div>
+</div>
+
 <div class="filter-node promotion_box" data-filter='["sales","Bargain Finds | $10 & under with free shipping"]'>
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2YwUkk3">Bargain Finds | $10 & under with free shipping</a></h2>
     <p>Prices include standard shipping, rates may vary by final destination</p>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2YwUkk3">Discover More</a></div>
+</div>
+
+<div class="filter-node promotion_box" data-filter='["promotions","Create a pet profile to shop coupons, deals and personalized recommendations for your pet."]'>
+  <a target="_blank" href="https://amzn.to/30vHRO2"><img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Create a pet profile"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/30vHRO2">Create a pet profile to shop coupons, deals and personalized recommendations for your pet.</a></h2>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/30vHRO2">Discover More</a></div>
 </div>
 
 <div class="filter-node promotion_box" data-filter='["coupons","Amazon Coupons"]'>
