--- a/app/views/deals_days/_day_04.html.erb
+++ b/app/views/deals_days/_day_04.html.erb
@@ -81,7 +81,7 @@
     <p><a target="_blank" href="https://amzn.to/2XuxPzH">Etekcity Food Digital Kitchen Weight Scale Grams and Ounces, Small, Backlit, Stainless Steel</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$12.99</span><span class="ori_price">$18.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount with coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -119,7 +119,7 @@
     <p><a target="_blank" href="https://amzn.to/2YCkmCz">(2 Pack | 120 Capsules) Best Keto Diet Pills with Carb Supplement - Exogenous Ketones - Approved Science Ketosis Women Men...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$30.00</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount with coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -175,7 +175,7 @@
     <p><a target="_blank" href="https://amzn.to/2JhtWpp">Joseph Joseph 85133 Surface Sink Caddy Stainless Steel Sponge Holder Organizer Tidy Drains Water for Kitchen, Small, Silver</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$9.99</span><span class="ori_price">$17.00</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount with coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
