--- a/app/views/guides/guide_01.html.erb
+++ b/app/views/guides/guide_01.html.erb
@@ -7,8 +7,8 @@
   </div> -->
 
   <div class="guide_show_header" id="movie-card-list">
-    <div class="movie-card" data-section="batman">
-      <div class="movie-card__overlay"></div>                
+    <div class="movie-card" data-section="pink">
+      <div class="movie-card__overlay pink"></div>                
       <div class="movie-card__content">
         <div class="movie-card__header">
           <h1 class="movie-card__title gift_show_title">Gift for people who are CRAZY about BATMAN!</h1>
